--- a/pl/contact.html
+++ b/pl/contact.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="../css/nav.css" />
-    <link rel="stylesheet" href="../css/contact.css" />
+    <link rel="stylesheet" href="../css/tiles.css" />
 
     <script src="./nav.js" defer></script>
 
