--- a/pl/contact.html
+++ b/pl/contact.html
@@ -39,8 +39,8 @@
             Masz pytanie lub propozycję współpracy? Napisz do mnie.
           </p>
 
-          <div class="contact-grid">
-            <a href="mailto:piotr.sawecki1@gmail.com" class="contact-card">
+          <div class="tile-grid">
+            <a href="mailto:piotr.sawecki1@gmail.com" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -64,7 +64,7 @@
             <a
               href="https://www.linkedin.com/in/piotr-sawecki-59b64b368/"
               target="_blank"
-              class="contact-card"
+              class="tile-card"
             >
               <div class="icon-box">
                 <svg
@@ -92,7 +92,7 @@
             <a
               href="https://github.com/PiotrSaw/"
               target="_blank"
-              class="contact-card"
+              class="tile-card"
             >
               <div class="icon-box">
                 <svg
