--- a/en/technologies.html
+++ b/en/technologies.html
@@ -245,7 +245,7 @@
                 </svg>
               </div>
               <h3>C#</h3>
-              <span class="link-text">Desktop Applications</span>
+              <span class="link-text">Web Applications</span>
             </div>
 
             <div class="tile-card">
