--- a/pl/technologies.html
+++ b/pl/technologies.html
@@ -246,7 +246,7 @@
                 </svg>
               </div>
               <h3>C#</h3>
-              <span class="link-text">Aplikacje Desktopowe</span>
+              <span class="link-text">Aplikacje Webowe</span>
             </div>
 
             <div class="tile-card">
