change eng high school name

--- a/en/education.html
+++ b/en/education.html
@@ -50,7 +50,7 @@
 
           <section class="card">
             <h2>
-              II Liceum Ogólnokształcące im. Hetmana Jana Zamoyskiego w Lublinie
+              Hetman Jan Zamoyski High School No. 2 in Lublin
             </h2>
             <p>
               September 2019 - April 2022<br />
