add Bogdanka Intership

--- a/en/education.html
+++ b/en/education.html
@@ -38,6 +38,14 @@
           <h1>Education</h1>
 
           <section class="card">
+            <h2>Lubelski Węgiel Bogdanka S.A.</h2>
+            <p>
+              July 2025<br />
+              Intern in the IT infrastructure department.
+            </p>
+          </section>
+
+          <section class="card">
             <h2>Lublin University of Technology</h2>
             <p>
               February 2026 - Present<br />
