--- a/pl/education.html
+++ b/pl/education.html
@@ -38,6 +38,14 @@
           <h1>Wykształcenie</h1>
 
           <section class="card">
+            <h2>Lubelski Węgiel Bogdanka S.A.</h2>
+            <p>
+              lipiec 2025<br />
+              Praktykant w dziale infrastruktury IT.
+            </p>
+          </section>
+
+          <section class="card">
             <h2>Politechnika Lubelska</h2>
             <p>
               luty 2026 - obecnie<br />
