--- a/pl/projects.html
+++ b/pl/projects.html
@@ -193,9 +193,7 @@
                 </svg>
               </div>
               <h3>Aplikacja Serwis Rowerowy v2</h3>
-              <span class="link-text"
-                >Php, Laravel, MySQL</span
-              >
+              <span class="link-text">Php, Laravel, MySQL</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -218,8 +216,52 @@
                 </svg>
               </div>
               <h3>Aplikacja Serwis Rowerowy v1</h3>
+              <span class="link-text">Html, Css, JavaScript</span>
+            </a>
+            <a href="" class="tile-card">
+              <div class="icon-box">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-list-check-icon lucide-list-check"
+                >
+                  <path d="M16 5H3" />
+                  <path d="M16 12H3" />
+                  <path d="M11 19H3" />
+                  <path d="m15 18 2 2 4-4" />
+                </svg>
+              </div>
+              <h3>Aplikacja Lista Zakupów</h3>
+              <span class="link-text">React</span>
+            </a>
+            <a href="" class="tile-card">
+              <div class="icon-box">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-chart-line-icon lucide-chart-line"
+                >
+                  <path d="M3 3v16a2 2 0 0 0 2 2h16" />
+                  <path d="m19 9-5 5-4-4-3 3" />
+                </svg>
+              </div>
+              <h3>Aplikacja Zestawiająca Stopy Procentowe i Ceny Mieszkań</h3>
               <span class="link-text"
-                >Html, Css, JavaScript</span
+                >Express, JavaScript, React, MySQL, Git, Docker</span
               >
             </a>
           </div>
