--- a/pl/projects.html
+++ b/pl/projects.html
@@ -46,7 +46,7 @@
               );
             "
           >
-            <a href="" class="tile-card">
+            <a href="./projects/passapp.html" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
