change title technologies

--- a/en/technologies.html
+++ b/en/technologies.html
@@ -2,7 +2,7 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title>Piotr Sawecki - Technologie</title>
+    <title>Piotr Sawecki</title>
     <meta
       name="keywords"
       content="Technologie, Java, Spring Boot, JS, Python"
