fix projects nav PL

--- a/pl/projects/passapp.html
+++ b/pl/projects/passapp.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../../css/download.css" />
     <link rel="stylesheet" href="../../css/gallery.css" />
 
-    <script src="../nav.js" defer></script>
+    <script src="./nav.js" defer></script>
     <script src="../../js/gallery.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
