add text "view project" PL, EN

--- a/en/projects.html
+++ b/en/projects.html
@@ -31,6 +31,7 @@
         <header class="mobile-header">
           <div id="mobile-menu-trigger"></div>
           <span class="logo-mobile">Piotr Sawecki</span>
+              
         </header>
 
         <main>
@@ -65,9 +66,8 @@
                 </svg>
               </div>
               <h3>PassApp</h3>
-              <span class="link-text"
-                >Express, Typescript, PostgreSQL, Docker, Git</span
-              >
+              <span class="link-text">Express, Typescript, PostgreSQL, Docker, Git</span>
+                <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -91,6 +91,7 @@
               </div>
               <h3>Gender Detection System</h3>
               <span class="link-text">Python, Roboflow, Git</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -117,6 +118,7 @@
               </div>
               <h3>Dots and Boxes Game</h3>
               <span class="link-text">Java, Git</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -146,6 +148,7 @@
               </div>
               <h3>Tests Generator</h3>
               <span class="link-text">Express, JavaScript, MongoDB, Git</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -168,9 +171,8 @@
                 </svg>
               </div>
               <h3>Bike Service Aplication v3</h3>
-              <span class="link-text"
-                >Express, JavaScript, React, MongoDB, Git</span
-              >
+              <span class="link-text">Express, JavaScript, React, MongoDB, Git</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -194,6 +196,7 @@
               </div>
               <h3>Bike Service Aplication v2</h3>
               <span class="link-text">Php, Laravel, MySQL</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -217,6 +220,7 @@
               </div>
               <h3>Bike Service Aplication v1</h3>
               <span class="link-text">Html, Css, JavaScript</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -240,6 +244,7 @@
               </div>
               <h3>Shopping List Application</h3>
               <span class="link-text">React</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
             <a href="" class="tile-card">
               <div class="icon-box">
@@ -260,9 +265,8 @@
                 </svg>
               </div>
               <h3>Application that compares Interest Rates and Apartment Prices</h3>
-              <span class="link-text"
-                >Express, JavaScript, React, MySQL, Git, Docker</span
-              >
+              <span class="link-text">Express, JavaScript, React, MySQL, Git, Docker</span>
+              <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
           </div>
         </main>
