--- a/en/projects.html
+++ b/en/projects.html
@@ -47,7 +47,7 @@
               );
             "
           >
-            <a href="" class="tile-card">
+            <a href="./projects/passapp.html" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
