--- a/en/projects.html
+++ b/en/projects.html
@@ -69,7 +69,7 @@
               <span class="link-text">Express, Typescript, PostgreSQL, Docker, Git</span>
                 <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
-            <a href="" class="tile-card">
+            <a href="./projects/detection.html" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
