--- a/en/projects.html
+++ b/en/projects.html
@@ -246,7 +246,7 @@
               <span class="link-text">React</span>
               <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
-            <a href="" class="tile-card">
+            <a href="./projects/bank_rates.html" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
