--- a/pl/projects.html
+++ b/pl/projects.html
@@ -203,7 +203,7 @@
               
               <span class="link-text" style="margin-top: 1rem;">Zobacz projekt &rarr;</span>
             </a>
-            <a href="" class="tile-card">
+            <a href="./projects/bikemaster1.html" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
