--- a/en/projects.html
+++ b/en/projects.html
@@ -150,7 +150,7 @@
               <span class="link-text">Express, JavaScript, MongoDB, Git</span>
               <span class="link-text" style="margin-top: 1rem;">View project &rarr;</span>
             </a>
-            <a href="" class="tile-card">
+            <a href="./projects/bikemaster3.html" class="tile-card">
               <div class="icon-box">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
