--- a/en/projects.html
+++ b/en/projects.html
@@ -326,6 +326,38 @@
                 >View project &rarr;</span
               >
             </a>
+
+             <a href="./projects/films.html" class="tile-card">
+              <div class="icon-box">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-film-icon lucide-film"
+                >
+                  <rect width="18" height="18" x="3" y="3" rx="2" />
+                  <path d="M7 3v18" />
+                  <path d="M3 7.5h4" />
+                  <path d="M3 12h18" />
+                  <path d="M3 16.5h4" />
+                  <path d="M17 3v18" />
+                  <path d="M17 7.5h4" />
+                  <path d="M17 16.5h4" />
+                </svg>
+              </div>
+              <h3>Movie Application</h3>
+              <span class="link-text">C#, .NET, SQLite</span>
+
+              <span class="link-text" style="margin-top: 1rem"
+                >View project &rarr;</span
+              >
+            </a>
           </div>
         </main>
 
