--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Przekierowywanie...</title>
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg" />
     <script>
         // Sprawdź język przeglądarki
         var lang = navigator.language || navigator.userLanguage; 
