--- a/pl/technologies.html
+++ b/pl/technologies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Piotr Sawecki</title>
+    <link rel="icon" type="image/svg+xml" href="../images/favicon.svg" />
     <meta
       name="keywords"
       content="Technologie, Java, Spring Boot, JS, Python"
